requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortnet-ase"
version = "0.2"
authors = [{name = "T. W. van der Heide"},]
dependencies = ["numpy", "h5py", "ase", "hsd", "fortnet-python"]
requires-python = ">=3.10"
description = "Interfacing Fortnet with the Atomic Simulation Environment"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "BSD"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/vanderhe/fortnet-ase"
Documentation = "https://fortnet.readthedocs.io/en/latest/interfaces/ase/index.html"
Repository = "https://github.com/vanderhe/fortnet-ase.git"
Issues = "https://github.com/vanderhe/fortnet-ase/issues"

[project.optional-dependencies]
test = ["pytest",]
