[metadata]
name = fortnet-ase
version = 0.2
author = T. W. van der Heide
author_email = vanderhe@uni-bremen.de
url = https://github.com/vanderhe/fortnet-ase
description = Interfacing Fortnet with the Atomic Simulation Environment
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    = src
packages = fnetase
install_requires =
    wheel
    setuptools
    pytest
    numpy
    h5py
    ase
    hsd
    fortnet-python

[options.packages.find]
where = src
